SET(SOURCES components/ui_comp_app_button.c
    components/ui_comp_notification_widget.c
    components/ui_comp_setting_panel.c
    components/ui_comp.c
    screens/ui_Default_Clock.c
    screens/ui_Notifications.c
    screens/ui_Notification_Expand.c
    screens/ui_Alarms.c
    screens/ui_Set_Alarm.c
    screens/ui_Alarm_Going_Off.c
    screens/ui_Stopwatch.c
    screens/ui_Timers.c
    screens/ui_Settings.c
    screens/ui_Debug.c
    screens/ui_Apps.c
    screens/ui_Calculator.c
    screens/ui_Compass.c
    screens/ui_Flashlight.c
    screens/ui_Music.c
    screens/ui_Weather.c
    screens/ui_Health.c
    screens/ui_Call.c
    screens/ui_Schedule.c
    screens/ui_SkeletonWatchFace.c
    screens/ui_SimplisticWatchFace.c
    screens/ui_Blocky_Clock.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    images/ui_img_tick_dashes_png.c
    images/ui_img_tick_dots_png.c
    images/ui_img_step_png.c
    images/ui_img_minutehandstub_png.c
    images/ui_img_hourhandstub_png.c
    images/ui_img_secondhandstub_png.c
    images/ui_img_no_bluetooth_small_png.c
    images/ui_img_notificationbell_png.c
    images/ui_img_seconddashstub_png.c
    images/ui_img_seconddotstub_png.c
    images/ui_img_gwatch_logo_png.c
    images/ui_img_brightness_png.c
    images/ui_img_bluetooth_small_nobackground_png.c
    images/ui_img_bellnobackground_png.c
    images/ui_img_restart_button_png.c
    images/ui_img_playpause_button_png.c
    images/ui_img_arrow_png.c
    images/ui_img_power_icon_png.c
    images/ui_img_calculator_icon_nobackground_png.c
    images/ui_img_settings_gear_png.c
    images/ui_img_mostly_cloudy_png.c
    images/ui_img_compass_png.c
    images/ui_img_flashlight_png.c
    images/ui_img_play_button_png.c
    images/ui_img_album_cover_png.c
    images/ui_img_pause_button_png.c
    images/ui_img_moon_png.c
    images/ui_img_sunny_png.c
    images/ui_img_rain_png.c
    images/ui_img_snow_rain_png.c
    images/ui_img_mostly_sunny_png.c
    images/ui_img_wind_png.c
    images/ui_img_call1_png.c
    images/ui_img_skeletonminutehand_png.c
    images/ui_img_simplisticminutehand_png.c
    images/ui_img_simplistichourhand_png.c
    images/ui_img_4809254_png.c
    fonts/ui_font_Blocky_16.c
    fonts/ui_font_Blocky_48.c
    fonts/ui_font_Comfortaa_10.c
    fonts/ui_font_Comfortaa_12.c
    fonts/ui_font_Comfortaa_16.c
    fonts/ui_font_Comfortaa_26.c
    fonts/ui_font_Comfortaa_30.c
    fonts/ui_font_Monoton_38.c
    fonts/ui_font_Monoton_48.c
    fonts/ui_font_Music_14.c)

add_library(ui ${SOURCES})
